# shredder

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: github_workflows_build.yml
cmake/: FindBotan.cmake
src/: CMakeLists.txt  Random.cpp  Random.h  icon.rc  rsc.qrc
src/zxcvbn/: CMakeLists.txt  zxcvbn.cpp
zxcvbn/: zxcvbn.cpp
